# Progetto_PCS_2024

Project/: CMakeLists.txt  Progetto PCS 2024.pptx  main.cpp  main_test.cpp
Project/Documentazione/: plant_uml.txt
Project/Export_Paraview/: FR10_paraview.inp  FR10_traces_paraview.inp  FR200_paraview.inp  FR200_traces_paraview.inp  FR362_paraview.inp  FR362_traces_paraview.inp  FR3_paraview.inp  FR3_traces_paraview.inp  FR50_paraview.inp  FR50_traces_paraview.inp  FR82_paraview.inp  FR82_traces_paraview.inp
Project/Result/: FR10_traces.txt  FR10_traces_reordered.txt  FR200_traces.txt  FR200_traces_reordered.txt  FR362_traces.txt  FR362_traces_reordered.txt  FR3_traces.txt  FR3_traces_reordered.txt  FR50_traces.txt  FR50_traces_reordered.txt  FR82_traces.txt  FR82_traces_reordered.txt
Project/TestingParaview/Code/: main.cpp
Project/TestingParaview/Code/src/: CMakeLists.txt  example_unit_test.hpp  pippo_test.hpp
Project/src/: CMakeLists.txt  DiscreteFractureNetwork.hpp  PolygonalMesh.hpp  Utils.cpp  Utils.hpp
Project/src_paraview/: CMakeLists.txt  UCDUtilities.cpp  UCDUtilities.hpp  UtilsParaview.cpp  UtilsParaview.hpp  main_paraview.cpp
Project/src_test/: CMakeLists.txt  Test.hpp
